--- a/Develop/client/.gitignore
+++ b/Develop/client/.gitignore
@@ -7,12 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+
+# Environment variables
+.env
 *.local
 
-# Editor directories and files
+# Editor directories and OS junk
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +28,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore wrongly-pushed file
+Project README.md
